# agents

./: .gitignore  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/community_contributions/deep_research_with_clarifying_questions_kj/: clarifying_agent.py  deep_research.py  email_agent.py  planner_agent.py  writer_agent.py
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py
3_crew/debate_me/: README.md  pyproject.toml
3_crew/debate_me/output/: decide.md  oppose.md  propose.md
3_crew/debate_me/src/debate_me/: crew.py  main.py
3_crew/debate_me/src/debate_me/config/: agents.yaml  tasks.yaml
3_crew/engineering_team/: accounts.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml
3_crew/financial_researcher_me/: README.md  pyproject.toml
3_crew/financial_researcher_me/output/: report.md
3_crew/financial_researcher_me/src/financial_researcher_me/: crew.py  main.py
3_crew/financial_researcher_me/src/financial_researcher_me/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_me/: README.md  pyproject.toml
3_crew/stock_picker_me/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_me/src/stock_picker_me/: crew.py  main.py
3_crew/stock_picker_me/src/stock_picker_me/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_me/src/stock_picker_me/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  email_autoomation_practice.ipynb  memory_me.db-shm  memory_me.db-wal  sidekick.py
4_langgraph/sandbox/: dinner.md
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  tickets.db
5_autogen/sandbox/: flights.md
guides/: 11_async_python.ipynb
