[project]
name = "debate_me"
version = "0.1.0"
description = "debate_me using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chroma-hnswlib==0.7.6",
    "crewai[tools]>=0.150.0,<1.0.0",
]

[project.scripts]
debate_me = "debate_me.main:run"
run_crew = "debate_me.main:run"
train = "debate_me.main:train"
replay = "debate_me.main:replay"
test = "debate_me.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
