[project]
name = "stock_picker_me"
version = "0.1.0"
description = "stock_picker_me using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
stock_picker_me = "stock_picker_me.main:run"
run_crew = "stock_picker_me.main:run"
train = "stock_picker_me.main:train"
replay = "stock_picker_me.main:replay"
test = "stock_picker_me.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
